[gd_scene load_steps=2 format=3 uid="uid://c35xucuh6y4w3"]

[ext_resource type="Script" path="res://lib/camera_pivot.gd" id="1_u7yli"]

[node name="CameraPivot" type="Node3D"]
script = ExtResource("1_u7yli")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0)
cull_mask = 1048573
near = 0.15

[node name="RayCastToWalls" type="RayCast3D" parent="Camera"]
target_position = Vector3(0, 0, 0)
collision_mask = 512

[node name="RayCastToFloor" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_mask = 512

[node name="TopDown" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 2.5, 3)

[node name="TPVNear" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.255, 1.611, 0.3)

[node name="TPV" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.996194, 0.0871557, 0, -0.0871557, 0.996194, 0.5, 1.8, 0.8)

[node name="FPV" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.49, 0)
